finished styling cast details page

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -11,3 +11,16 @@
     background-color: black;
     color: #fff;
 }
+
+.Header .nav-link {
+    display: inline-block;
+    padding: 0.5em 1em;
+    color: rgba(255, 255, 255, 0.835);
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.Header .nav-link-active {
+    color: red;
+    border-bottom: 2px solid;
+}
