--- a/src/CastList/CastList.css
+++ b/src/CastList/CastList.css
@@ -5,3 +5,17 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 40px;
 }
+
+/* Smaller screens and tablets */
+@media only screen and (max-width: 960px) {
+    .CastList {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+/* Small screens mobile */
+@media only screen and (max-width: 700px) {
+    .CastList {
+        grid-template-columns: 1fr;
+    }
+}
